[project]
name = "tsp-ga"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gideonoludeyi", email = "49620086+gideonoludeyi@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ga = "ga:main"
tsp = "tsp:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
